<resources>
    <string name="app_name">GithubApiDemo</string>
    <string name="search_btn">Search</string>
    <string name="search_empty">Please enter a search item!</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="issues">Issues</string>
    <string name="language">Language</string>
    <string name="privateX">Private</string>
    <string name="fork">Fork</string>
</resources>
